<resources>
    <string name="app_name">Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">Timon</string>
    <string name="team_b">Pumbaa</string>
    <string name="score">0</string>
    <string name="reset">Reset</string>
    <string name="free_kick">+3 Free Kick</string>
    <string name="uppercut">+2 Uppercut</string>
    <string name="wide_hook">+1 Wide Hook</string>
    <string name="todo">TODO</string>
</resources>
