<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/textPadding"
                    android:text="@string/team_a"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/timonpic" />

                <TextView
                    android:id="@+id/timon_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/scorePadding"
                    android:text="@string/score"
                    android:textColor="@color/scoreColor"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addThreeForTimon"
                    android:text="@string/free_kick" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addTwoForTimon"
                    android:text="@string/uppercut" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addOneForTimon"
                    android:text="@string/wide_hook" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/viewMarginTop"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/textPadding"
                    android:text="@string/team_b"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/pumbaapic" />

                <TextView
                    android:id="@+id/pumbaa_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/scorePadding"
                    android:text="@string/score"
                    android:textColor="@color/scoreColor"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addThreeForPumbaa"
                    android:text="@string/free_kick" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addTwoForPumbaa"
                    android:text="@string/uppercut" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_layout_marginBottom"
                    android:layout_marginLeft="@dimen/button_layout_marginLeft"
                    android:layout_marginRight="@dimen/button_layout_marginRight"
                    android:onClick="addOneForPumbaa"
                    android:text="@string/wide_hook" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/reset_layout_marginBottom"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>

